--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>English Reading Task</title>
+  <title>Words and Sentences</title>
   <script type = "text/javascript" src="jquery-3.6.0.js"></script>
   <script src = "jspsych/jspsych.js"></script>
   <script src = 'jspsych/plugin-fullscreen.js'></script>
