--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -28,8 +28,8 @@
     message_progress_bar: '<span style = "color:red";><b>DO NOT REFRESH YOUR BROWSER OR HIT BACK!<span></b>',
     on_finish: function(data){
       const subject_url = jsPsych.data.get().select('subject').values[0];
-      console.log(jsPsych.data.subject);
-      console.log(jsPsych.data.email);
+      console.log(jsPsych.data.get().select('subject').values[0]);
+      console.log(jsPsych.data.get().select('email').values[0]);
       var lextale_score = ((rw_score / 40*100) + (nw_score / 20 * 100))  / 2;
 		  jsPsych.data.addProperties({lextale_score: lextale_score});
       addMaster(jsPsych.data.subject, jsPsych.data.email);
