--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -28,8 +28,8 @@
     message_progress_bar: '<span style = "color:red";><b>DO NOT REFRESH YOUR BROWSER OR HIT BACK!<span></b>',
     on_finish: function(data){
       const subject_url = jsPsych.data.get().select('subject').values[0];
-      console.log(jsPsych.data.get().select('subject').values[0]);
-      console.log(jsPsych.data.get().select('email').values[0]);
+      //console.log(jsPsych.data.get().select('subject').values[0]);
+      //console.log(jsPsych.data.get().select('email').values[0]);
       var lextale_score = ((rw_score / 40*100) + (nw_score / 20 * 100))  / 2;
 		  jsPsych.data.addProperties({lextale_score: lextale_score});
       addMaster(jsPsych.data.get().select('subject').values[0], jsPsych.data.get().select('email').values[0]);
@@ -88,9 +88,9 @@ const name = {
       jsPsych.data.addProperties({family_name: data.response.family_name})
       jsPsych.data.addProperties({email: data.response.email})
       jsPsych.data.addProperties({subject:  data.response.first_name.concat('_', data.response.family_name, '_', performance.now())}),
-     // console.log(data.subject)
-      //  console.log(data.response.email)
-      createData(data.subject, data.response.email)
+      console.log(data.subject)
+      console.log(data.email)
+      createData(data.subject, data.email)
       }
 };
 
