--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -36,7 +36,7 @@
       jsPsych.data.displayData();
      // console.log('finished')
       // save data to csv
-      //saveData(jsPsych.data.get().select('subject').values[0], jsPsych.data.get().csv());
+      saveData(jsPsych.data.get().select('subject').values[0], jsPsych.data.get().csv());
       //window.location = "https://vuw.qualtrics.com/jfe/form/SV_56BeZAD6eb5pS2W?sub=".concat(subject_url).concat('&email1=').concat(email1_url).concat('&email2=').concat(email2_url)
     },
   });
