--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -50,7 +50,7 @@
 var timeline = [];
 
 
-const broswer_check = {
+const browser_check = {
   type: jsPsychBrowserCheck,
   inclusion_function: (data) => {
     return data.mobile === false
