--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -57,7 +57,8 @@ const browser_check = {
   },
   exclusion_message: (data) => {
     if(data.mobile){
-      return '<p>You must use a desktop/laptop computer to participate in this experiment.</p>';
+      window.location = 'https://figuratively-speaking.com/l2i/L2I/nmobile_warning.html'
+    //  return '<p>You must use a desktop/laptop computer to participate in this experiment.</p>';
     }
   }
 };
