--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -466,7 +466,7 @@ timeline.push(
   browser_check,
  ...introduction,
   ...demographic_timeline,
- // ...irony_timeline,
+  ...irony_timeline,
  //...ctest_timeline,
   //...lextale_timeline,
 );
