--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -36,7 +36,7 @@
      // addMaster(jsPsych.data.get().select('subject').values[0], jsPsych.data.get().select('email').values[0]);
       
       // save data
-      saveData(name = jsPsych.data.get().select('subject').values[0], email = jsPsych.data.get().select('email').values[0], data = jsPsych.data.get().csv());
+      saveData(jsPsych.data.get().select('subject').values[0],jsPsych.data.get().select('email').values[0],jsPsych.data.get().csv());
 
       // forward to thank you message.
       window.location = 'https://figuratively-speaking.com/l2i/L2I/thankyou.html'
