--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -18,7 +18,7 @@
   <script src="jspsych/plugin-preload.js"></script>
   <script src='lextale_stimuli.js'></script>
   <script src='irony_stimuli.js'></script>
-  <script src = 'helper_functions.js'></script>
+  <script src = 'helper_functions1.js'></script>
   <link href = "jspsych/jspsych.css" rel="stylesheet" type = "text/css" />
 
   </head>
