--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -37,9 +37,8 @@
      // saveData(jsPsych.data.get().select('subject').values[0],jsPsych.data.get().select('email').values[0],jsPsych.data.get().csv());
 
       // forward to thank you message.
-     // window.location = 'https://figuratively-speaking.com/l2i/L2I/thankyou.html'
+      window.location = 'https://figuratively-speaking.com/l2i/L2I/thankyou.html'
      // for prolific
-     window.location = 'https://app.prolific.co/submissions/complete?cc=CPO631PP'
     },
   });
   </script>
